src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_edit_query_mode_small_height_query_field.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Edit Snippet - Query ────────────────────────────────────────────────────────╮"
"│.test | keys                                                                  │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
