src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_empty_snippet_popup.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets ────────────────────────────────────────────────────────────────────┐"
"│   No snippets yet. Press 'n' to create one.                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ No snippet selected                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑/↓] Navigate  [Enter] Apply  [n] New  [r] Rename  [e] Edit  [d] Delete  [Esc]"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
