src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_filtered_results_with_search.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│select                                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (2/3) ──────────────────────────────────────────────────────────────┐"
"│ ► Select all keys - Returns array of all keys                                │"
"│   Select items - Select all items                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ keys                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑/↓] Navigate  [Enter] Apply  [n] New  [r] Rename  [e] Edit  [d] Delete  [Esc]"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
