src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_list_item_description_truncated.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Snippets (1) ────────────────────────────────────────────────────────────────╮"
"│ ▌ Keys - This is an extremely long description that goes well beyond the i…  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰te • Enter Apply • Ctrl+N New • Ctrl+E Edit • Ctrl+R Replace • Ctrl+D Delete •╯"
"╭ Snippet Preview ─────────────────────────────────────────────────────────────╮"
"│ keys                                                                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
