src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_list_item_hovered.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Search ──────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Snippets (2) ────────────────────────────────────────────────────────────────╮"
"│ ▌ Select all keys - Returns array of all keys                                │"
"│   Flatten arrays                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰te • Enter Apply • Ctrl+N New • Ctrl+E Edit • Ctrl+R Replace • Ctrl+D Delete •╯"
"╭ Snippet Preview ─────────────────────────────────────────────────────────────╮"
"│ keys                                                                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
