src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_no_matches_message.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│xyz123                                                                        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (0/2) ──────────────────────────────────────────────────────────────┐"
"│   No matches                                                                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└[Enter] Apply | [Ctrl+N] New | [Ctrl+E] Edit | [Ctrl+R] Replace | [Ctrl+D] Del┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ No snippet selected                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
