src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_preview_with_description.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (2) ────────────────────────────────────────────────────────────────┐"
"│ ► Select all keys - Returns an array of all keys in the object               │"
"│   Flatten arrays - Flattens nested arrays into a single array                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ keys                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑/↓] Navigate  [Enter] Apply  [n] New  [r] Rename  [e] Edit  [d] Delete  [Esc]"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
