src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_preview_with_long_query_wrapping.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Snippets (1) ────────────────────────────────────────────────────────────────┐"
"│ ► Complex filter - Filters active premium users and extracts key fields      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query Preview ───────────────────────────────────────────────────────────────┐"
"│ .data[] | select(.status == "active" and .type == "premium") | {id, name,    │"
"│ email, created_at, metadata}                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
