src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_preview_without_description.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Snippets (1) ────────────────────────────────────────────────────────────────┐"
"│ ► Identity                                                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└te | Enter Apply | Ctrl+N New | Ctrl+E Edit | Ctrl+R Replace | Ctrl+D Delete |┘"
"┌ Snippet Preview ─────────────────────────────────────────────────────────────┐"
"│ .                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
